prevent regulators from viewing and modifying their personal details

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -42,7 +42,7 @@
                     @await Html.PartialAsync("Partials/_SuccessBanner", Localizer["UserRemoved", Model.RemovedUsersName])
                 }
 
-                @if (Model.ShowManageUserDetailChanges)
+                @if (Model.ShowManageUserDetailChanges && (Model.IsRegulatorUser.HasValue && !Model.IsRegulatorUser.Value))
                 {
                 <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
                     @Localizer["ManageAccountDetails"]
