feature/408632 update company address

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateCompanyAddress.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateCompanyAddress.cshtml
@@ -30,11 +30,11 @@
                                 <div class="govuk-radios__item">
                                     <input class="govuk-radios__input"
                                            type="radio"
-                                           gov-for="isUpdateCompanyAddress"
+                                           gov-for="IsUpdateCompanyAddress"
                                            gov-value="@nameof(YesNoAnswer.Yes)"
                                            gov-first-option="true">
                                     <label class="govuk-label govuk-radios__label"
-                                           gov-for="isUpdateCompanyAddress"
+                                           gov-for="IsUpdateCompanyAddress"
                                            gov-value="@nameof(YesNoAnswer.Yes)"
                                            gov-first-option="true">
                                         @SharedLocalizer["Yes"]
@@ -43,10 +43,10 @@
 
                                 <div class="govuk-radios__item">
                                     <input class="govuk-radios__input" type="radio"
-                                           gov-for="isUpdateCompanyAddress"
+                                           gov-for="IsUpdateCompanyAddress"
                                            gov-value="@nameof(YesNoAnswer.No)">
                                     <label class="govuk-label govuk-radios__label"
-                                           gov-for="isUpdateCompanyAddress"
+                                           gov-for="IsUpdateCompanyAddress"
                                            gov-value="@nameof(YesNoAnswer.No)">
                                         @SharedLocalizer["No"]
                                     </label>
