add  new page for update organisation name

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -65,7 +65,7 @@
                             }
                             else
                             {
-                                    <a href="~/@PagePath.ChangeCompanyDetails" class="govuk-link govuk-link--no-visited-state">
+                                    <a href="~/@PagePath.CompanyName" class="govuk-link govuk-link--no-visited-state">
                                     @SharedLocalizer["Change"]
                                     <span class="govuk-visually-hidden"></span>
                                 </a>
