--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_BackLink.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_BackLink.cshtml
@@ -1,3 +1,3 @@
 @model string
 
-<a href="@Model" class="govuk-back-link">@SharedLocalizer["Back"]</a>
+<a href="@Model" class="govuk-back-link" aria-label="@SharedLocalizer["Back"]">@SharedLocalizer["Back"]</a>
