--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateCompanyAddress.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateCompanyAddress.cshtml
@@ -20,7 +20,7 @@
                         <fieldset class="govuk-fieldset">
                             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                 <h1 class="govuk-heading-m govuk-!-margin-bottom-4">
-                                    Do you want to update your organisation’s business address?
+                                    @Localizer["UpdateCompanyAddress.Question"]
                                 </h1>
                             </legend>
 
