--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
@@ -33,17 +33,17 @@
                 <h2 class="govuk-visually-hidden">Support links</h2>
                 <ul class="govuk-footer__inline-list govuk-!-margin-top-7">
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@cookieLink">
+                        <a class="govuk-footer__link" href="@cookieLink" aria-label="@Localizer["Footer.CookiesAriaLabel"]">
                             @Localizer["Footer.Cookies"]
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")" target="_blank" rel="noopener noreferrer">
+                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")" target="_blank" rel="noopener noreferrer" aria-label="@Localizer["Footer.PrivacyAriaLabel"]">
                             @Localizer["Footer.Privacy"]
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")" target="_blank" rel="noopener noreferrer">
+                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")" target="_blank" rel="noopener noreferrer" aria-label="@Localizer["Footer.AccessibilityAriaLabel"]">
                             @Localizer["Footer.Accessibility"]
                         </a>
                     </li>
