--- a/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@using FrontendAccountManagement.Web.Constants;
 @using FrontendAccountManagement.Web.Configs
 @using FrontendAccountManagement.Web.Extensions
+@using FrontendAccountManagement.Web.ViewModels.Shared
 @using Microsoft.Extensions.Options
 @inject IOptions<ExternalUrlsOptions> ExternalUrlsOptions;
 @{
@@ -71,10 +72,14 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 @await Component.InvokeAsync("PhaseBanner")
-                @await Component.InvokeAsync("LanguageSwitcher")
+                @await Component.InvokeAsync("LanguageSwitcher")     
                 @if (ViewBag.BackLinkToDisplay != null)
                 {
-                    @await Html.PartialAsync("Partials/Govuk/_BackLink", (string)ViewBag.BackLinkToDisplay)
+                    @await Html.PartialAsync("Partials/Govuk/_BackLink", 
+                        new BackLinkModel {
+                            PagePath = (string)ViewBag.BackLinkToDisplay,
+                            AriaLabelLocalizerName = (string)ViewBag.BackAriaLocalizerName
+                        });
                 }
                 @if (ViewBag.CustomBackLinkToDisplay != null)
                 {
