Trying to get rid of this pointless error

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserCompanyRoleDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserCompanyRoleDetails.cshtml
@@ -51,7 +51,7 @@
                                 {
                                     string checkedAttribute = Model.SelectedCompaniesHouseRole == role.Value ? "checked" : "";
                                     <div class="govuk-radios__item">
-                                        <input class="govuk-radios__input"
+                                        <!input class="govuk-radios__input"
                                                name="SelectedCompaniesHouseRole"
                                                type="radio"
                                                @checkedAttribute
