Feature/dg2 7 sprint 3 4 422467 check details (#150)
* updates after merge in sprint branch

* rem dupe method from merge

* Updtaes for consolidating check your details for CH org approved person

* uncomment validation

* additional tests and model change to remove redundante property

* Corrected validation error on telephone change page

* Coreected back link error

---------

Co-authored-by: John Fitzgerald <john.fitzgerald.external@eviden.com>

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccountTelephone.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccountTelephone.cshtml
@@ -16,12 +16,12 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                @if (!ViewData.ModelState.IsValid)
-                {
-                    @await Html.PartialAsync("Partials/Govuk/_ErrorSummary", errorsViewModel)
-                }  
                 
-                <form asp-controller="AccountManagement" asp-action="PagePath.ManageAccountTelephone" method="post">
+                <form asp-controller="AccountManagement" asp-action="PagePath.ApprovedPersonPhoneNumberChange" method="post">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        @await Html.PartialAsync("Partials/Govuk/_ErrorSummary", errorsViewModel)
+                    }
                     <fieldset class="govuk-fieldset">
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                             <h1 class="govuk-heading-l govuk-!-margin-bottom-4">
