--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using FrontendAccountManagement.Web.Constants
+﻿﻿@using FrontendAccountManagement.Web.Constants
 @model FrontendAccountManagement.Web.ViewModels.AccountManagement.EditUserDetailsViewModel
 
 @{
@@ -35,30 +35,24 @@
                                     @Localizer["FirstName"]
                                 </dt>
                             </div>
+
                             <dd class="govuk-summary-list__value">
-	                            @Localizer[Model.FirstName].Value
-							</dd>
-							<dd class="govuk-summary-list__actions">
-								<a class="govuk-link govuk-link--no-visited-state" href="~/@PagePath.ApprovedPersonNameChange">
-									@SharedLocalizer["Change"] <span class="govuk-visually-hidden"></span>
-								</a>
-							</dd>
-						</div>
-                        <div class="govuk-summary-list__row">
-                            <div class="govuk-!-margin-right-3">
-	                            <dt class="govuk-summary-list__key">
-		                            @Localizer["LastName"]
-	                            </dt>
-                            </div>
-                            <dd class="govuk-summary-list__value">
-	                            @Localizer[Model.LastName].Value
-                            </dd>
-                            <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link govuk-link--no-visited-state" href="~/@PagePath.ApprovedPersonNameChange">
-	                                @SharedLocalizer["Change"] <span class="govuk-visually-hidden"></span>
-	                            </a>
+                                @Localizer[Model.FirstName].Value
                             </dd>
                         </div>
+
+                        <div class="govuk-summary-list__row">
+                            <div class="govuk-!-margin-right-3">
+                                <dt class="govuk-summary-list__key">
+                                    @Localizer["LastName"]
+                                </dt>
+                            </div>
+
+                            <dd class="govuk-summary-list__value">
+                                @Localizer[Model.LastName].Value
+                            </dd>
+                        </div>
+
                         @if (!string.IsNullOrEmpty(Model.JobTitle))
                         {
                             <div class="govuk-summary-list__row">
@@ -67,16 +61,13 @@
                                         @Localizer["JobTitle"]
                                     </dt>
                                 </div>
+
                                 <dd class="govuk-summary-list__value">
-	                                @Localizer[Model.JobTitle].Value
-                                </dd>
-                                <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link govuk-link--no-visited-state" href="~/@PagePath.ApprovedPersonRoleChange">
-	                                    @SharedLocalizer["Change"] <span class="govuk-visually-hidden"></span>
-	                                </a>
+                                    @Localizer[Model.JobTitle].Value
                                 </dd>
                             </div>
                         }
+
                         @if (!string.IsNullOrEmpty(Model.Telephone))
                         {
                             <div class="govuk-summary-list__row">
@@ -87,25 +78,23 @@
                                 </div>
 
                                 <dd class="govuk-summary-list__value">
-	                                @Localizer[Model.Telephone].Value
-                                </dd>
-                                <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link govuk-link--no-visited-state" href="~/@PagePath.ApprovedPersonPhoneNumberChange">
-	                                    @SharedLocalizer["Change"] <span class="govuk-visually-hidden"></span>
-	                                </a>
+                                    @Localizer[Model.Telephone].Value
                                 </dd>
                             </div>
                         }
+
                         <div class="govuk-!-margin-right-3">
-	                        <br />
-	                        <br />
-	                        <dt class="govuk-summary-list__value">
-		                        <button class="govuk-button" data-module="govuk-button" type="submit">
-			                        @(isUpdatable ? @Localizer["SaveAndContinue"] : @Localizer["Continue"])
-		                        </button>
-	                        </dt>
+                            <dt class="govuk-summary-list__value">
+                                <button class="govuk-button" data-module="govuk-button" type="submit">
+                                    @(isUpdatable ? @Localizer["SaveAndContinue"] : @Localizer["Continue"])
+                                </button>
+                                &nbsp;  <a href="~/@PagePath.WhatAreYourDetails" class="govuk-link govuk-link--no-visited-state">
+                                    @SharedLocalizer["Change"]
+                                </a>
+                            </dt>
                         </div>
                     </dl>
+
                     <br />
                     <br />
                 </div>
