--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetailsApprovedUserCompaniesHouse.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetailsApprovedUserCompaniesHouse.cshtml
@@ -7,7 +7,7 @@
     bool isUpdatable = @ViewBag.IsUpdatable;
 }
 
-@using (Html.BeginForm(FormMethod.Post))
+@using (Html.BeginForm("CheckYourDetails", "AccountManagement", FormMethod.Post))
 {
     <input type="hidden" asp-for="FirstName" />
     <input type="hidden" asp-for="LastName" />
