Reverted custom back link changes

--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/_CustomBackLink.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/_CustomBackLink.cshtml
@@ -1,6 +1,3 @@
-@using FrontendAccountManagement.Web.ViewModels.Shared
-@{
-    var backLinkModel = @Model as BackLinkModel;
-}
+@model string
 
-<a href="@backLinkModel.PagePath" class="govuk-back-link" aria-label="@((backLinkModel.AriaLabelLocalizerName != null) ? @SharedLocalizer[@backLinkModel.AriaLabelLocalizerName] : null)">@SharedLocalizer["Custom.BackToHome"]</a>
+<a href="@Model" class="govuk-back-link">@SharedLocalizer["Custom.BackToHome"]</a>
